# architecture_logicielle_flask

./: README.md  data.db  export (2).csv  pyproject.toml
src/archilog/: services.py
src/archilog/views/: __init__.py  api.py  web_ui.py
src/archilog/views/templates/: 404.html  create.html  delete.html  entries.html  entry.html  home.html  import_csv.html  index.html  update.html
