[project]
name = "archi_logicielle1"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
dependencies = [
    "click>=8.1.8",
    "sqlalchemy>=2.0.40",
    "flask>=3.1.0",
    "tabulate>=0.9.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "dotenv>=0.9.9",
    "flask-httpauth>=4.8.0",
    "spectree>=1.4.5",
    
]
requires-python = ">=3.10"
authors = [
    {name = "22302683", email = "moh78078000@gmail.com"},
]

[project.license]
text = "MIT"

[project.scripts]
archilog = "archilog.views.cli:cli"

[build-system]
requires = [
    "pdm-backend",
]

build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
_.env_file ="dev.env"
start = "flask --app archilog.views --debug run" # demarrer l'application 
